Fix visibility class
* classname is hide-for-small-only
* display must be initial for medium and up

--- a/_scss/responsive.scss
+++ b/_scss/responsive.scss
@@ -1,11 +1,11 @@
-.hide-for-small {
+.hide-for-small-only {
   display: none !important;
 
 }
 
 @media screen and (min-width: 45em) {
-  .hide-for-small {
-    display: none !important;
+  .hide-for-small-only {
+    display: initial !important;
 
   }
 
